Stub out home page

--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -2,6 +2,6 @@
 This is a file for global css, if needed for your app.
 */
 
-h1 {
-  /* color: red; */ /*Don't actually make this red... */
+.container:first-of-type {
+  padding: 15px;
 }
